--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-essential",
-  "version": "1.0.0",
-  "description": "A project focusing on React and Toolbox",
+  "name": "ReactCounterApp",
+  "version": "0.1.0",
+  "description": "Simple Day Tracker Application",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server"
