--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple Day Tracker Application",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "suggestions": "babel-node server.js"
   },
   "author": "Colin Smith",
   "license": "MIT",
@@ -25,7 +26,12 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "cors": "^2.8.1",
     "expect": "^1.20.2",
+    "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
+    "mongodb": "^2.2.24",
+    "mongoose": "^4.8.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.3",
