--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-	"presets": ["latest", "stage-0", "react"]
+	"plugins": [
+		"transform-class-properties",
+		"syntax-decorators",
+		"transform-decorators-legacy",
+		"react-hot-loader/babel"
+	],
+	"presets": ["latest", "stage-0", "react"],
+	"env": {
+		"presets": [
+			"react-hmre"
+		]
+	}
 }
