--- a/package.json
+++ b/package.json
@@ -2,36 +2,77 @@
   "name": "ReactCounterApp",
   "version": "0.3.0",
   "description": "Simple Day Tracker Application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "suggestions": "babel-node server.js"
+    "dev": "env NODE_ENV=development babel-node server.js --colors",
+    "build": "env NODE_ENV=production webpack --config ./webpack.config.babel.js --colors",
+    "prod": "env NODE_ENV=production webpack -p --config ./webpack.config.babel.js --colors && babel-node server.js",
+    "test": "jest",
+    "populate": "babel-node ./src/populate.js",
+    "server": "babel-node server.js"
   },
   "author": "Colin Smith",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.7.4",
     "autoprefixer-loader": "^3.2.0",
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^19.0.0",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.16.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jest": "^19.0.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.1",
+    "prepush": "^3.1.11",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-logger": "^2.8.1",
+    "sass-loader": "^6.0.2",
+    "sinon": "^1.17.7",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dashboard": "^0.3.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.0",
+    "webpack-merge": "^3.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "expect": "^1.20.2",
-    "express": "^4.15.2",
+    "express": "^4.14.1",
+    "express-favicon": "^2.0.0",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
-    "mongoose": "^4.8.6",
+    "mongoose": "^4.8.4",
+    "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.3",
